--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,30 @@
 </head>
 <body>
   <h1 style="text-align: center ;" >Fire Functions Boss Man</h1>
+
+    <!-- auth modals -->
+    <div class="auth open">
+      <div class="modal active">
+        <h2>Login</h2>
+        <form class="login">
+          <input type="text" name="email" placeholder="Email">
+          <input type="password" name="password" placeholder="Password">
+          <button>Login</button>
+          <p class="error"></p>
+        </form>
+        <div>No account? <a class="switch">Register instead</a></div>
+      </div>
+      <div class="modal">
+        <h2>Register</h2>
+        <form class="register">
+          <input type="text" name="email" placeholder="Email">
+          <input type="password" name="password" placeholder="Password">
+          <button>Register</button>
+          <p class="error"></p>
+        </form>
+        <div>Got an account? <a class="switch">Login instead</a></div>
+      </div>
+    </div>
   
     <!-- new request modal -->
     <div class="new-request">
@@ -41,29 +65,21 @@
           </div>
         </li>
       </ul>
+      <button class="call" >Say Hello</button>
     </section>
 
-
-
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-
-  <script>
-    import { initializeApp } from 'firebase/app';
-    import { getAuth } from "firebase/auth";
-    import { getFunctions } from 'firebase/functions'; 
-    import { getFirestore } from "firebase/firestore";
-    
-    // See: https://firebase.google.com/docs/web/learn-more#config-object
-    const firebaseConfig = require('../firebaseConfig.json')
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const functions = getFunctions(app);
-    const auth = getAuth(app);
-    // Initialize Cloud Firestore and get a reference to the service
-    const db = getFirestore(app);
-
-  </script>
-
+        <!-- update the version number as needed -->
+        <script src="/__/firebase/8.10.1/firebase-app.js"></script><!-- get access to firebase object -->
+        <!-- include only the Firebase features as you need -->
+        <script src="/__/firebase/8.10.1/firebase-auth.js"></script>
+        <script src="/__/firebase/8.10.1/firebase-firestore.js"></script>
+        <script src="/__/firebase/8.10.1/firebase-functions.js"></script>
+        <!-- initialize the SDK after all desired features are loaded -->
+        <script src="/__/firebase/init.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>    
+        
+        <!-- this is running the app -->
+        <script src="js/app.js"></script> 
+        <script src="js/auth.js"></script> 
 </body>
 </html>
